[project]
name = "khive-crystal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.20.3",
    "plotly>=5.24.1",
    "pydantic>=2.9.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pdoc3>=0.11.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
